# metatron-exporter

./: .nvim.lua  README.md  exporter.py  flake.nix  formatter.py  main.py  pyproject.toml
metatron_exporter/metatron/: format.py  linalg.py  shared.py
metatron_exporter/metatron/compo/: __init__.py  camera.py  light.py  material.py  medium.py  renderer.py  serde.py  shape.py  spectrum.py  texture.py  tracer.py  transform.py
metatron_exporter/metatron/linalg/: __init__.py
metatron_exporter/tungsten/: __init__.py  bsdf.py  camera.py  light.py  material.py  medium.py  primitive.py  renderer.py  shape.py  spectrum.py  transform.py
