[project]
name = "metatron-exporter"
version = "0.0.1"
description = "Exporter for metatron"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.pyright]
autoImportCompletions = false
reportAny = false
reportMissingParameterType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUnusedCallResult = false
